# GoloBot

./: .gitignore  README.md  abreviations.py  bot.py  makefile  my_virtualenv.sh  noel.py  pyproject.toml  restart.py  secrets_template.py  tox.ini
Aborted/: stdio.py
Auxilliaire/: aux_maths.py  auxilliaire.py  games.py
GoloBot/: __init__.py  template.py  views.py
GoloBot/Auxilliaire/: __init__.py  abreviations.py  aux_maths.py  converters.py  decorators.py  doc.py  games.py  settings.py  stdio.py
GoloBot/Musique/: __init__.py  audiocontroller.py  aux.py  songs.py
GoloBot/Twitch/: __init__.py
GoloBot/UI/: _2048.py  __init__.py  aide.py  base_imports.py  buttons.py  dashboard.py  dm.py  embeds.py  error.py  infos_user.py  modals.py  qpup.py  rolereact.py  selects.py
GoloBot/WoWs/: wowsAPI.py
Main/: main.py  new_year.py  noel.py  restart.py  restart.sh
Main/Stats/: lecture.py  players.txt  reset.py
Stats/: lecture.py  reset.py
Tests/: test_auxilliaire.py  tests_golobot.py
WoWs/: getplayer.py  wowsAPI.py
