[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GoloBot"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fast_autocomplete",
    "fast-autocomplete[levenshtein]",
    "requests",
    "py-cord",
    "pytz"
]

[project.urls]
"Homepage" = "https://github.com/HenriGolo/GoloBot"
"Bug Tracker" = "https://github.com/HenriGolo/GoloBot/issues"
