[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GoloBot"
version = "0.0.1"
authors = [
  { name="Henri Golo", email="henri.golo.313f@gmail.com" },
]
description = "Discord bot for basic moderation tools and some other fun commands"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "py-cord[voice]",
    "pytz",
    "requests",
    "yt_dlp",
    "youtube_search"
]


[project.urls]
"Homepage" = "https://github.com/HenriGolo/GoloBot"
"Bug Tracker" = "https://github.com/HenriGolo/GoloBot/issues"
